{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 529,
  "lineage": "5ae134a5-c0aa-6562-af33-166545f57a3b",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-033f1af2ec7e72c57",
            "association_id": "eipassoc-0343bb2d6f361dcee",
            "domain": "vpc",
            "id": "eipalloc-033f1af2ec7e72c57",
            "instance": "i-016e6774abe859ec5",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-049e066b15e9d8b2d",
            "private_dns": "ip-10-185-0-38.ap-south-1.compute.internal",
            "private_ip": "10.185.0.38",
            "public_dns": "ec2-13-232-89-244.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.89.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion_eip"
            },
            "tags_all": {
              "Name": "bastion_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_key_pair.bastion-keypair-dev",
            "module.bastion.aws_security_group.bastion-sg",
            "module.network.aws_subnet.public-subnet",
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6329e222e662a52",
            "arn": "arn:aws:ec2:ap-south-1:503237308475:instance/i-016e6774abe859ec5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016e6774abe859ec5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-keypair-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-049e066b15e9d8b2d",
            "private_dns": "ip-10-185-0-38.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.185.0.38",
            "public_dns": "ec2-13-232-89-244.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.89.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-06859ea2a424cf2c0",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb688115720e1cd2",
            "tags": {
              "Name": "bastionHost"
            },
            "tags_all": {
              "Name": "bastionHost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d392d20eeaae94c5"
            ]
          },
          "dependencies": [
            "module.bastion.aws_key_pair.bastion-keypair-dev",
            "module.bastion.aws_security_group.bastion-sg",
            "module.network.aws_subnet.public-subnet",
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:security-group/sg-0d392d20eeaae94c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d392d20eeaae94c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "218.156.136.117/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "503237308475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:security-group/sg-07e07ca07552f8cf2",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e07ca07552f8cf2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "clusterSG",
            "name_prefix": "",
            "owner_id": "503237308475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2565033735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e07ca07552f8cf2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster-sg",
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a90478d4934cefcd",
            "association_id": "eipassoc-0619c648afbcb700e",
            "domain": "vpc",
            "id": "eipalloc-0a90478d4934cefcd",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d10d839283034b09",
            "private_dns": "ip-10-185-0-149.ap-south-1.compute.internal",
            "private_ip": "10.185.0.149",
            "public_dns": "ec2-3-108-135-12.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.135.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cookalone-natgw-eip"
            },
            "tags_all": {
              "Name": "cookalone-natgw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:internet-gateway/igw-0c6d6bd67482cdcac",
            "id": "igw-0c6d6bd67482cdcac",
            "owner_id": "503237308475",
            "tags": {
              "Name": "cookalone-igw"
            },
            "tags_all": {
              "Name": "cookalone-igw"
            },
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a90478d4934cefcd",
            "connectivity_type": "public",
            "id": "nat-0089767eb54d9ccbd",
            "network_interface_id": "eni-0d10d839283034b09",
            "private_ip": "10.185.0.149",
            "public_ip": "3.108.135.12",
            "subnet_id": "subnet-0bb688115720e1cd2",
            "tags": {
              "Name": "cookalone-natgw"
            },
            "tags_all": {
              "Name": "cookalone-natgw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat-gateway-eip",
            "module.network.aws_subnet.public-subnet",
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:route-table/rtb-086e612e07d5104a9",
            "id": "rtb-086e612e07d5104a9",
            "owner_id": "503237308475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0089767eb54d9ccbd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cookalone-private"
            },
            "tags_all": {
              "Name": "cookalone-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat-gateway-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_subnet.public-subnet",
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:route-table/rtb-0075cc3da9c238f07",
            "id": "rtb-0075cc3da9c238f07",
            "owner_id": "503237308475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6d6bd67482cdcac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cookalone-public-table"
            },
            "tags_all": {
              "Name": "cookalone-public-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet-gw",
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02945f5598d19a17e",
            "route_table_id": "rtb-086e612e07d5104a9",
            "subnet_id": "subnet-0af8ac2a7218ab9ac"
          },
          "dependencies": [
            "module.network.aws_eip.nat-gateway-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.private-route-table",
            "module.network.aws_subnet.private-subnet",
            "module.network.aws_subnet.public-subnet",
            "module.network.aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bfd29d737271053",
            "route_table_id": "rtb-086e612e07d5104a9",
            "subnet_id": "subnet-0af3e030a98988304"
          },
          "dependencies": [
            "module.network.aws_eip.nat-gateway-eip",
            "module.network.aws_nat_gateway.nat-gateway",
            "module.network.aws_route_table.private-route-table",
            "module.network.aws_subnet.private-subnet",
            "module.network.aws_subnet.public-subnet",
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da04016c30961a5e",
            "route_table_id": "rtb-0075cc3da9c238f07",
            "subnet_id": "subnet-0bb688115720e1cd2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet-gw",
            "module.network.aws_route_table.public-route-table",
            "module.network.aws_subnet.public-subnet",
            "module.network.aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08888f07722a79d86",
            "route_table_id": "rtb-0075cc3da9c238f07",
            "subnet_id": "subnet-064a11d3b1f73f735"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet-gw",
            "module.network.aws_route_table.public-route-table",
            "module.network.aws_subnet.public-subnet",
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-data-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:subnet/subnet-0f8f63079d32b9304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.185.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8f63079d32b9304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503237308475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cookalone-private-data-1",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cookalone-private-data-1",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:subnet/subnet-05d204e8a50015dc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.185.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d204e8a50015dc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503237308475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cookalone-private-data-2",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cookalone-private-data-2",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:subnet/subnet-0af8ac2a7218ab9ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.185.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af8ac2a7218ab9ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503237308475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cookalone-private-1",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cookalone-private-1",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:subnet/subnet-0af3e030a98988304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.185.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af3e030a98988304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503237308475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cookalone-private-2",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cookalone-private-2",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:subnet/subnet-0bb688115720e1cd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.185.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb688115720e1cd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503237308475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cookalone-public-1",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cookalone-public-1",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:subnet/subnet-064a11d3b1f73f735",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.185.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064a11d3b1f73f735",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503237308475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cookalone-public-2",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cookalone-public-2",
              "kubernetes.io/cluster/cookalone": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:vpc/vpc-0ae97240f9aafbc59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.185.0.0/16",
            "default_network_acl_id": "acl-02ef676bbe54fd662",
            "default_route_table_id": "rtb-0efebdd1316ce1913",
            "default_security_group_id": "sg-0900e08ea43537ef0",
            "dhcp_options_id": "dopt-0bea42d25b4995161",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ae97240f9aafbc59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0efebdd1316ce1913",
            "owner_id": "503237308475",
            "tags": {
              "Name": "cookalone-vpc"
            },
            "tags_all": {
              "Name": "cookalone-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:vpc-endpoint/vpce-0d7e5e3f0fcc1c9e0",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-0d7e5e3f0fcc1c9e0",
            "owner_id": "503237308475",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "tags": {
              "Name": "cookalone-endpoint-s3"
            },
            "tags_all": {
              "Name": "cookalone-endpoint-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:503237308475:security-group/sg-0b9a5f82c7e547bce",
            "description": "aurora security group for mysql",
            "egress": [],
            "id": "sg-0b9a5f82c7e547bce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cookalone-aurora-security-group",
            "name_prefix": "",
            "owner_id": "503237308475",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae97240f9aafbc59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main-vpc"
          ]
        }
      ]
    }
  ]
}